🍤 fix: duplicated  ingredients & overflow window

--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -25,9 +25,10 @@ ion-item{
     font-family: Microsoft JhengHei;
 }
 img{
-    width: 50px;
+    width: 52px;
     height: 40px;
     padding-left: 5px;
+    padding-top: 3px;
 }
 .stepContainer{
     height: 50px;
@@ -91,8 +92,8 @@ img{
 .search_icon{
     position: fixed;
     right: 20px;
-    bottom: 30%;
-    width: 60px;
+    bottom: 15%;
+    width: 55px;
     height: 50px;
 }
 
@@ -112,7 +113,7 @@ img{
 
 .fixed {
     position: fixed;
-    bottom: 40px;
+    bottom: 20px;
     right: 0;
     left: 0;
    align-items: center;
@@ -131,7 +132,10 @@ img{
     align-items: center;
     display: inline-block;
     vertical-align: middle;
-    height: 50px;
+    height: 30px;
     width: 100%;
     background-color: white;
+  }
+  .outer_container{
+    height: 75%;
   }
